# research-code

install/: local_setup.sh  setup.sh
install/test_pkg/lib/test_pkg/: C2.csv  C3.csv  C5.csv  C6.csv  C7.csv  actuation_analysis.py  evaluation.py  experiment.py  magnetism.py  markers.py  solver.py  state_stream.py  structure.py  torque_map.py
install/test_pkg/share/ament_index/resource_index/parent_prefix_path/: test_pkg
install/test_pkg/share/test_pkg/: package.sh  package.xml
install/test_pkg/share/test_pkg/cmake/: test_pkgConfig.cmake
log/: latest_build
src/test_pkg/: CMakeLists.txt
src/test_pkg/data/: C1.csv  C4.csv  C8.csv
src/test_pkg/scripts/: actuation_analysis.py  computation.py  evaluation.py  experiment.py  magnetism.py  marker.py  markers.py  output_plot.py  solver.py  state_stream.py  structure.py  torque_map.py
