cmake_minimum_required(VERSION 3.20)
project(test_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(
  PROGRAMS
    scripts/magnetism.py
  DESTINATION lib/${PROJECT_NAME}
)

install(
  FILES
    scripts/C1.csv
    scripts/C2.csv
    scripts/C3.csv
    scripts/C4.csv
    scripts/C5.csv
    scripts/C6.csv
    scripts/C7.csv
    scripts/C8.csv
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
